infrastructure/subnets.tf
data "aws_availability_zones" "available" {
  state = "available"
}


resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true # remove this when we move EC2 to a private subnet

  tags = {
    Name = "auth-public-a"
  }
}


resource "aws_subnet" "cache_private_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = aws_subnet.public_a.availability_zone
  map_public_ip_on_launch = false

  tags = {
    Name = "auth-cache-private-a"
  }
}


resource "aws_subnet" "db_private_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = data.aws_availability_zones.available.names[0]
  map_public_ip_on_launch = false

  tags = {
    Name = "auth-db-private-a"
  }
}
resource "aws_subnet" "db_private_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = data.aws_availability_zones.available.names[1]
  map_public_ip_on_launch = false

  tags = {
    Name = "auth-db-private-b"
  }
}
resource "aws_db_subnet_group" "postgres" {
  name = "auth-postgres-subnet-group"

  subnet_ids = [
    aws_subnet.db_private_a.id,
    aws_subnet.db_private_b.id,
  ]

  tags = {
    Name = "auth-postgres-subnet-group"
  }
}
